--- a/app/src/main/res/layout/admin_add_season.xml
+++ b/app/src/main/res/layout/admin_add_season.xml
@@ -1,169 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayout26"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_centerHorizontal="true"
-        android:background="#0011ff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/textView23"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:shadowColor="#333333"
-            android:shadowDx="3"
-            android:shadowDy="2"
-            android:shadowRadius="1"
-            android:text="ADD"
-            android:textColor="@color/text"
-            android:textSize="@dimen/h1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout28"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="#70ffffff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginTop="20dp" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ชื่อฤดูกาล"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/nameseason" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ชื่อสถานที่ท่องเที่ยว"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/nametour" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปภาพสถานที่ท่องเที่ยว1"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imagee" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปภาพสถานที่ท่องเที่ยว2"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imagef" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปภาพสถานที่ท่องเที่ยว3"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imageg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รายละเอียดสถานที่ท่องเที่ยว"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/descriptionseason" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ละติจูด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/latijudb" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ลองติจูด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/longtijudb" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="เวลาเปิดปิด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/openseason" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="อีเมล์"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/emailseason" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ค่าเข้าสถานที่"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/priceseason" />
-
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:text="ADD"
-                android:id="@+id/addseason"
-                android:layout_alignParentBottom="true"
-                android:onClick="clickaddseason"
-                android:background="@drawable/button_shape1"
-                android:textColor="#ffffff" />
+            <LinearLayout
+                android:id="@+id/linearLayout26"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_centerHorizontal="true"
+                android:background="#0011ff"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:text="Delete"
-                android:id="@+id/button46"
-                android:layout_alignParentBottom="true"
-                android:onClick="clickSignUpSign"
-                android:background="@drawable/button_shape1"
-                android:textColor="#ffffff" />
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:shadowColor="#333333"
+                    android:shadowDx="3"
+                    android:shadowDy="2"
+                    android:shadowRadius="1"
+                    android:text="ADD"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/h1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout28"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:background="#70ffffff"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ชื่อฤดูกาล" />
+
+                <EditText
+                    android:id="@+id/nameseason"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ชื่อสถานที่ท่องเที่ยว" />
+
+                <EditText
+                    android:id="@+id/nametour"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="รูปภาพสถานที่ท่องเที่ยว1" />
+
+                <EditText
+                    android:id="@+id/imagee"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="รูปภาพสถานที่ท่องเที่ยว2" />
+
+                <EditText
+                    android:id="@+id/imagef"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="รูปภาพสถานที่ท่องเที่ยว3" />
+
+                <EditText
+                    android:id="@+id/imageg"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="รายละเอียดสถานที่ท่องเที่ยว" />
+
+                <EditText
+                    android:id="@+id/descriptionseason"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ละติจูด" />
+
+                <EditText
+                    android:id="@+id/latijudb"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ลองติจูด" />
+
+                <EditText
+                    android:id="@+id/longtijudb"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="เวลาเปิดปิด" />
+
+                <EditText
+                    android:id="@+id/openseason"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="อีเมล์" />
+
+                <EditText
+                    android:id="@+id/emailseason"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ค่าเข้าสถานที่" />
+
+                <EditText
+                    android:id="@+id/priceseason"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/addseason"
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/button_shape1"
+                        android:onClick="clickaddseason"
+                        android:text="ADD"
+                        android:textColor="#ffffff" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
