--- a/app/src/main/res/layout/admin_add_tourtable.xml
+++ b/app/src/main/res/layout/admin_add_tourtable.xml
@@ -1,218 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <LinearLayout
-        android:id="@+id/linearLayout26"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_centerHorizontal="true"
-        android:background="#0011ff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/textView23"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:shadowColor="#333333"
-            android:shadowDx="3"
-            android:shadowDy="2"
-            android:shadowRadius="1"
-            android:text="ADD"
-            android:textColor="@color/text"
-            android:textSize="@dimen/h1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout28"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="#70ffffff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginTop="20dp" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ชื่อจังหวัด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/nameprovince" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ชื่ออำเภอ"/>
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/namedistrict" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ชื่อสถานที่ท่องเที่ยว"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/nametour" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รายละเอียดสถานที่ท่องเที่ยว"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/descriptions" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ตำบล"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/nametumbon" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="หมู่บ้าน"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/namemooban" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปที่1"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imagea" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปที่2"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imageb" />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="รูปที่3"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/imagec" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ละติจูด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/latijud" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ลองติจูด"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/longtijud" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ที่อยู่"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/address" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="เบอร์โทรศัพท์สถานที่"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/calltour" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="เวลาเปิดปิดสถานที่"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/opentour" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="อีเมล์"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/emailtour" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ค่าเข้าสถานที่"/>
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/pricetour" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+        <LinearLayout
+            android:id="@+id/linearLayout26"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_centerHorizontal="true"
+            android:background="#0011ff"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <Button
-                android:layout_width="150dp"
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                android:shadowColor="#333333"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1"
                 android:text="ADD"
-                android:id="@+id/addtour"
-                android:layout_alignParentBottom="true"
-                android:onClick="clickaddtour"
-                android:background="@drawable/button_shape1"
-                android:textColor="#ffffff" />
-
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:text="Delete"
-                android:id="@+id/button46"
-                android:layout_alignParentBottom="true"
-                android:onClick="clickSignUpSign"
-                android:background="@drawable/button_shape1"
-                android:textColor="#ffffff" />
+                android:textColor="@color/text"
+                android:textSize="@dimen/h1" />
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linearLayout28"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:background="#70ffffff"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ชื่อจังหวัด" />
+
+            <EditText
+                android:id="@+id/nameprovince"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ชื่ออำเภอ" />
+
+            <EditText
+                android:id="@+id/namedistrict"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ชื่อสถานที่ท่องเที่ยว" />
+
+            <EditText
+                android:id="@+id/nametour"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="รายละเอียดสถานที่ท่องเที่ยว" />
+
+            <EditText
+                android:id="@+id/descriptions"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ตำบล" />
+
+            <EditText
+                android:id="@+id/nametumbon"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="หมู่บ้าน" />
+
+            <EditText
+                android:id="@+id/namemooban"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="รูปที่1" />
+
+            <EditText
+                android:id="@+id/imagea"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="รูปที่2" />
+
+            <EditText
+                android:id="@+id/imageb"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="รูปที่3" />
+
+            <EditText
+                android:id="@+id/imagec"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ละติจูด" />
+
+            <EditText
+                android:id="@+id/latijud"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ลองติจูด" />
+
+            <EditText
+                android:id="@+id/longtijud"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ที่อยู่" />
+
+            <EditText
+                android:id="@+id/address"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="เบอร์โทรศัพท์สถานที่" />
+
+            <EditText
+                android:id="@+id/calltour"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="เวลาเปิดปิดสถานที่" />
+
+            <EditText
+                android:id="@+id/opentour"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="อีเมล์" />
+
+            <EditText
+                android:id="@+id/emailtour"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ค่าเข้าสถานที่" />
+
+            <EditText
+                android:id="@+id/pricetour"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+
+                <Button
+                    android:id="@+id/addtour"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/button_shape1"
+                    android:text="ADD"
+                    android:textColor="#ffffff" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
