--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -26,7 +26,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="200dp"
                     android:id="@+id/imageView3"
-                    android:layout_marginTop="90dp" />
+                    android:layout_marginTop="135dp" />
 
 
             </LinearLayout>
@@ -315,38 +315,34 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="#ff7190"
-        android:gravity="center_horizontal"
+        android:gravity="center"
+        android:padding="5dp"
         android:orientation="horizontal"
         android:layout_marginTop="91dp">
 
         <TextView
-            android:id="@+id/tumbon"
+            android:id="@+id/Tumbon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:textColor="@color/text"
             android:textSize="@dimen/h2"
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp" />
+            android:layout_gravity="center_vertical" />
 
         <TextView
-            android:id="@+id/moban"
+            android:id="@+id/Moban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:textColor="@color/text"
             android:textSize="@dimen/h2"
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp" />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
 </RelativeLayout>
